차트 리스트 화면 정리 - 항목들 순서와 너비, 편집->미리보기 아이콘으로 변경, 이름 클릭시 미리보기->편집으로 수정

--- a/src/main/resources/public/template/report/reportTemplateEdit.html
+++ b/src/main/resources/public/template/report/reportTemplateEdit.html
@@ -79,7 +79,7 @@
                 <button class="z-button primary" th:if="${template?.templateId}"
                         sec:authorize="hasAuthority('report.update')"
                         onclick="actionTemplate('put')" th:text="#{common.btn.modify}"></button>
-                <button class="z-button secondary" onclick="preview()" th:text="#{report.btn.preview}"></button>
+                <button class="z-button secondary" onclick="preview()" th:text="#{common.btn.preview}"></button>
                 <button class="z-button secondary" th:if="${template?.templateId}"
                         sec:authorize="hasAuthority('report.delete')"
                         onclick="actionTemplate('delete')" th:text="#{common.btn.delete}"></button>
