--- a/src/main/resources/public/template/report/reportTemplatePreview.html
+++ b/src/main/resources/public/template/report/reportTemplatePreview.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
       layout:decorator="report/reportCore">
 <head>
-    <title th:text="#{report.label.preview}"></title>
+    <title th:text="#{common.label.preview}"></title>
 </head>
 <th:block layout:fragment="css">
     <link th:href="@{/assets/css/report.css}" rel="stylesheet"/>
