--- a/src/main/resources/public/template/report/reportTemplateView.html
+++ b/src/main/resources/public/template/report/reportTemplateView.html
@@ -57,7 +57,7 @@
                     <a class="z-button secondary" href="/reports/template/search" th:text="#{common.btn.list}"></a>
                 </div>
                 <div class="z-button-list">
-                    <button class="z-button secondary" onclick="preview()" th:text="#{report.btn.preview}"></button>
+                    <button class="z-button secondary" onclick="preview()" th:text="#{common.btn.preview}"></button>
                 </div>
             </div>
         </div>
