--- a/src/main/resources/public/template/chart/chartList.html
+++ b/src/main/resources/public/template/chart/chartList.html
@@ -8,12 +8,12 @@
 <table class="z-list-table">
     <thead class="z-list-head">
         <tr class="flex-row align-items-center">
-            <th style="width: 15%;" class="align-left" th:text="#{chart.label.type}"></th>
-            <th style="width: 15%;" class="align-left" th:text="#{chart.label.name}"></th>
+            <th style="width: 20%;" class="align-left" th:text="#{chart.label.name}"></th>
+            <th style="width: 20%;" class="align-left" th:text="#{chart.label.type}"></th>
             <th style="width: 25%;" class="align-left" th:text="#{chart.label.description}"></th>
-            <th style="width: 10%;" class="align-center" th:text="#{common.label.edit}"></th>
-            <th style="width: 15%;" class="align-left" th:text="#{common.label.writer}"></th>
-            <th style="width: 20%;" class="align-left" th:text="#{common.label.writeDate}"></th>
+            <th style="width: 10%;" class="align-center" th:text="#{common.label.preview}"></th>
+            <th style="width: 10%;" class="align-left" th:text="#{common.label.writer}"></th>
+            <th style="width: 15%;" class="align-left" th:text="#{common.label.writeDate}"></th>
         </tr>
     </thead>
     <tbody class="z-list-body">
@@ -21,20 +21,20 @@
             <td style="width:100%;" colspan="6" class="align-center" th:text="#{common.msg.noData}"></td>
         </tr>
         <tr class="flex-row align-items-center" th:unless="${#arrays.isEmpty(chartList)}" th:each="chart: ${chartList}">
-            <td style="width: 15%;" class="align-left" th:text="#{|chart.${chart.chartType}|}"></td>
-            <td sec:authorize="hasAuthority('chart.create') || hasAuthority('chart.update')" style="width: 15%;"
-                class="align-left underline pointer" th:onclick="openChartViewModal([[${chart.chartId}]], [[${chart.chartType}]], [[${chart.chartName}]])"
+            <td sec:authorize="hasAuthority('chart.create') || hasAuthority('chart.update')" style="width: 20%;"
+                class="align-left underline pointer" th:onclick="openChartEditModal([[${chart.chartId}]], [[${chart.chartType}]])"
                 th:text="${chart.chartName}">
             </td>
+            <td style="width: 20%;" class="align-left" th:text="#{|chart.${chart.chartType}|}"></td>
             <td style="width: 25%;" class="align-left" th:text="${chart.chartDesc}"></td>
             <td style="width: 10%;" class="align-center">
                 <button type="button" class="z-button-icon form" sec:authorize="hasAuthority('chart.create') || hasAuthority('chart.update')"
-                        th:onclick="openChartEditModal([[${chart.chartId}]], [[${chart.chartType}]])">
-                    <span class="z-icon i-edit"></span>
+                        th:onclick="openChartViewModal([[${chart.chartId}]], [[${chart.chartType}]], [[${chart.chartName}]])">
+                    <span class="z-icon i-popup"></span>
                 </button>
             </td>
-            <td style="width: 15%;" class="align-left" th:text="${chart.createUserName}"></td>
-            <td style="width: 20%;" class="align-left date-time" th:text="${chart.createDt}"></td>
+            <td style="width: 10%;" class="align-left" th:text="${chart.createUserName}"></td>
+            <td style="width: 15%;" class="align-left date-time" th:text="${chart.createDt}"></td>
         </tr>
     </tbody>
 </table>
