--- a/src/main/resources/public/template/user/userEditSelf.html
+++ b/src/main/resources/public/template/user/userEditSelf.html
@@ -319,6 +319,7 @@
                 rootLevel: 3,
                 target: 'treeList',
                 text: 'codeName',
+                nodeNameLabel: i18n.msg('common.msg.dataSelect', i18n.msg('common.label.data')),
                 defaultIcon: '/assets/media/icons/tree/icon_tree_users.svg',
                 leafIcon: '/assets/media/icons/tree/icon_tree_user.svg',
                 selectedValue: document.getElementById('departmentCode').value,
