--- a/src/main/resources/public/template/cmdb/attribute/attributeListModal.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeListModal.html
@@ -15,14 +15,14 @@
     </tr>
     </thead>
     <tbody id="ciClassAttributeList" class="z-list-body">
-    <tr class="no-data-found-list flex-row align-items-center" th:if="${#arrays.isEmpty(attributeList)}">
+    <tr class="no-data-found-list flex-row align-items-center" th:if="${#arrays.isEmpty(attributeList.data)}">
         <td style="width: 100%;" class="align-center" th:text="#{common.msg.noData}"></td>
     </tr>
-    <tr class="attribute-list" th:each="attribute, index : ${attributeList}">
+    <tr class="attribute-list" th:each="attribute, index : ${attributeList.data}">
         <td style="width: 5%;" class="align-center">
             <label class="z-checkbox" th:for="${index.index}" tabindex="0">
                 <input type="checkbox" th:name="${attribute.attributeName}" th:id="${index.index}"
-                       th:value="${attribute.attributeId}" th:disabled="${attribute.extends == true}">
+                       th:data-attribute-type="${attribute.attributeType}" th:value="${attribute.attributeId}">
                 <span></span>
             </label>
         </td>
