#9202 개인현황판 구현(코드 컨벤션 수정)

--- a/src/main/resources/public/template/dashboard/dashboardView.html
+++ b/src/main/resources/public/template/dashboard/dashboardView.html
@@ -14,74 +14,82 @@
     <h3 class="sub-title" th:text="#{dashboard.label.statistics}"></h3>
     <div id="statistic" class="flex-row">
         <div class="statistic-box flex-row align-items-center mr-4" th:each="statistic: ${dashboardStatistic}">
-          <table class="statistic-table">
-            <thead>
-            <tr>
-                <td th:switch= "${statistic.type}" class="align-center" rowspan="2">
-                    <img th:case="todo" class="z-icon" height="50%" width="50%" th:src="@{/assets/theme/{theme}/media/icons/dashboard/Icon_todo_document.svg(theme=${#authentication.details.theme})}">
-                    <img th:case="running" class="z-icon" height="50%" width="50%" th:src="@{/assets/theme/{theme}/media/icons/dashboard/Icon_running_document.svg(theme=${#authentication.details.theme})}">
-                    <img th:case="monthDone" class="z-icon" height="50%" width="50%" th:src="@{/assets/theme/{theme}/media/icons/dashboard/Icon_month_done_document.svg(theme=${#authentication.details.theme})}">
-                    <img th:case="done" class="z-icon" height="50%" width="50%" th:src="@{/assets/theme/{theme}/media/icons/dashboard/Icon_done_document.svg(theme=${#authentication.details.theme})}">
-                </td>
-                <td  th:switch= "${statistic.type}" colspan="2">
-                    <h4 th:case="todo" class="flex-row" th:text="#{dashboard.label.todoDocument}"></h4>
-                    <h4 th:case="running" class="flex-row" th:text="#{dashboard.label.runningDocument}"></h4>
-                    <h4 th:case="monthDone" class="flex-row" th:text="#{dashboard.label.monthDoneDocument}"></h4>
-                    <h4 th:case="done" class="flex-row" th:text="#{dashboard.label.doneDocument}"></h4>
-                </td>
-            </tr>
-            <tr>
-                <td class="align-left" colspan="2">
-                    <h1 class="statistic-header-type" name="total" th:text="${statistic.total}"></h1>
-                </td>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <td class="align-center">
-                    <img class="z-icon" height="35%" width="35%" th:src="@{/assets/theme/{theme}/media/icons/dashboard/icon_incident.svg(theme=${#authentication.details.theme})}">
-                </td>
-                <td>
-                    <h5 class="flex-row" th:text="#{dashboard.label.incident}"></h5>
-                </td>
-                <td>
-                    <h5 class="statistic-type" name="incident" th:text="${statistic.incident}"></h5>
-                </td>
-            </tr>
-            <tr>
-                <td class="align-center">
-                    <img class="z-icon" height="35%" width="35%" th:src="@{/assets/theme/{theme}/media/icons/dashboard/icon_inquiry.svg(theme=${#authentication.details.theme})}">
-                </td>
-                <td>
-                    <h5 class="flex-row" th:text="#{dashboard.label.inquiry}"></h5>
-                </td>
-                <td>
-                    <h5 class="statistic-type" name="inquiry" th:text="${statistic.inquiry}"></h5>
-                </td>
-            </tr>
-            <tr>
-                <td class="align-center">
-                    <img class="z-icon" height="35%" width="35%" th:src="@{/assets/theme/{theme}/media/icons/dashboard/icon_request.svg(theme=${#authentication.details.theme})}">
-                </td>
-                <td>
-                    <h5 class="flex-row" th:text="#{dashboard.label.request}"></h5>
-                </td>
-                <td>
-                    <h5 class="statistic-type" name="request" th:text="${statistic.request}"></h5>
-                </td>
-            </tr>
-            <tr>
-                <td class="align-center">
-                    <img height="35%" width="35%" th:src="@{/assets/theme/{theme}/media/icons/dashboard/icon_etc.svg(theme=${#authentication.details.theme})}">
-                </td>
-                <td>
-                    <h5 class="flex-row" th:text="#{dashboard.label.etc}"></h5>
-                </td>
-                <td>
-                    <h5 class="statistic-type" name="etc" th:text="${statistic.etc}"></h5>
-                </td>
-            </tr>
-            </tbody>
+            <table class="statistic-table">
+                <thead>
+                <tr>
+                    <td th:switch="${statistic.type}" class="align-center" rowspan="2">
+                        <img th:case="todo" class="z-icon" height="50%" width="50%"
+                             th:src="@{/assets/theme/{theme}/media/icons/dashboard/Icon_todo_document.svg(theme=${#authentication.details.theme})}">
+                        <img th:case="running" class="z-icon" height="50%" width="50%"
+                             th:src="@{/assets/theme/{theme}/media/icons/dashboard/Icon_running_document.svg(theme=${#authentication.details.theme})}">
+                        <img th:case="monthDone" class="z-icon" height="50%" width="50%"
+                             th:src="@{/assets/theme/{theme}/media/icons/dashboard/Icon_month_done_document.svg(theme=${#authentication.details.theme})}">
+                        <img th:case="done" class="z-icon" height="50%" width="50%"
+                             th:src="@{/assets/theme/{theme}/media/icons/dashboard/Icon_done_document.svg(theme=${#authentication.details.theme})}">
+                    </td>
+                    <td th:switch="${statistic.type}" colspan="2">
+                        <h4 th:case="todo" class="flex-row" th:text="#{dashboard.label.todoDocument}"></h4>
+                        <h4 th:case="running" class="flex-row" th:text="#{dashboard.label.runningDocument}"></h4>
+                        <h4 th:case="monthDone" class="flex-row" th:text="#{dashboard.label.monthDoneDocument}"></h4>
+                        <h4 th:case="done" class="flex-row" th:text="#{dashboard.label.doneDocument}"></h4>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="align-left" colspan="2">
+                        <h1 class="statistic-header-type" name="total" th:text="${statistic.total}"></h1>
+                    </td>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td class="align-center">
+                        <img class="z-icon" height="35%" width="35%"
+                             th:src="@{/assets/theme/{theme}/media/icons/dashboard/icon_incident.svg(theme=${#authentication.details.theme})}">
+                    </td>
+                    <td>
+                        <h5 class="flex-row" th:text="#{dashboard.label.incident}"></h5>
+                    </td>
+                    <td>
+                        <h5 class="statistic-type" name="incident" th:text="${statistic.incident}"></h5>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="align-center">
+                        <img class="z-icon" height="35%" width="35%"
+                             th:src="@{/assets/theme/{theme}/media/icons/dashboard/icon_inquiry.svg(theme=${#authentication.details.theme})}">
+                    </td>
+                    <td>
+                        <h5 class="flex-row" th:text="#{dashboard.label.inquiry}"></h5>
+                    </td>
+                    <td>
+                        <h5 class="statistic-type" name="inquiry" th:text="${statistic.inquiry}"></h5>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="align-center">
+                        <img class="z-icon" height="35%" width="35%"
+                             th:src="@{/assets/theme/{theme}/media/icons/dashboard/icon_request.svg(theme=${#authentication.details.theme})}">
+                    </td>
+                    <td>
+                        <h5 class="flex-row" th:text="#{dashboard.label.request}"></h5>
+                    </td>
+                    <td>
+                        <h5 class="statistic-type" name="request" th:text="${statistic.request}"></h5>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="align-center">
+                        <img height="35%" width="35%"
+                             th:src="@{/assets/theme/{theme}/media/icons/dashboard/icon_etc.svg(theme=${#authentication.details.theme})}">
+                    </td>
+                    <td>
+                        <h5 class="flex-row" th:text="#{dashboard.label.etc}"></h5>
+                    </td>
+                    <td>
+                        <h5 class="statistic-type" name="etc" th:text="${statistic.etc}"></h5>
+                    </td>
+                </tr>
+                </tbody>
             </table>
         </div>
     </div>
@@ -210,12 +218,12 @@
             let request = document.querySelectorAll('h5[name=request]');
             let etc = document.querySelectorAll('h5[name=etc]');
 
-            for(let i= 0; i < result.length ; i++) {
-                total[i].innerHTML= result[i].total;
-                incident[i].innerHTML= result[i].incident;
-                inquiry[i].innerHTML= result[i].inquiry;
-                request[i].innerHTML= result[i].request;
-                etc[i].innerHTML= result[i].etc;
+            for (let i = 0; i < result.length; i++) {
+                total[i].innerHTML = result[i].total;
+                incident[i].innerHTML = result[i].incident;
+                inquiry[i].innerHTML = result[i].inquiry;
+                request[i].innerHTML = result[i].request;
+                etc[i].innerHTML = result[i].etc;
             }
         })
     }
