#10970 미리보기 구현

--- a/src/main/resources/public/assets/css/formDesigner.css
+++ b/src/main/resources/public/assets/css/formDesigner.css
@@ -5978,6 +5978,7 @@ body.modal-active {
 .z-component .z-element {
   flex-basis: calc(((100% - 0px) * var(--data-column, 12)) / 12 + (var(--data-column) - 1) * 0px);
   padding: 0.4375rem 0;
+  pointer-events: none;
 }
 .z-component .z-element .input, .z-component .z-element .z-input {
   width: 100%;
