--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -2337,6 +2337,9 @@ body.modal-active {
 .z-group.accordion .z-group-accordion-checkBox:checked ~ .row-tooltip:not(.off):last-child {
   border-bottom: 0.0625rem solid #CFD5D9;
 }
+.z-group .z-element {
+  pointer-events: auto;
+}
 
 /* 태그 기능 디자인
  * /default/_tag.scss
