#10970 미리보기 구현
- select box 이슈 수정

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1448,6 +1448,7 @@ input:focus, input:hover, textarea:focus, textarea:hover, select:focus, select:h
 }
 
 select {
+  width: inherit;
   height: 2.25rem;
   font-family: inherit;
   font-size: 0.875rem;
