--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -1559,6 +1559,7 @@ input:focus, input:hover, textarea:focus, textarea:hover, select:focus, select:h
 }
 
 select {
+  width: inherit;
   height: 2.25rem;
   font-family: inherit;
   font-size: 0.875rem;
