--- a/src/main/resources/public/scss/formDesigner/_form.scss
+++ b/src/main/resources/public/scss/formDesigner/_form.scss
@@ -318,6 +318,7 @@
         .z-input {
           padding: 0.4375rem 0;
           margin: 0.25rem 0;
+          text-indent: $element-indent;
         }
       }
       // 데이터 없음
