--- a/src/main/resources/public/scss/document/_layout.scss
+++ b/src/main/resources/public/scss/document/_layout.scss
@@ -18,6 +18,15 @@
     z-index: 1000;
     @include scrollbarHidden;
 
+    &.preview {
+      .z-element {
+        > *:not(.z-input, .z-textarea, .z-text-editor) {
+          pointer-events: auto;
+          cursor: default;
+        }
+      }
+    }
+
     // 상단 영역
     .z-document-main-header {
       width: $drawing-board-width;
