--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -7016,7 +7016,7 @@ body.modal-active {
 .itsm-popup {
   width: 100%;
   height: 100vh;
-  padding: 1.875rem 2.5rem 1.25rem 2.5rem;
+  padding: 1.875rem 2.5rem 0 2.5rem;
   background-color: #FFFFFF;
 }
 .itsm-popup .popup-title {
@@ -7071,6 +7071,9 @@ body.modal-active {
 }
 .itsm-popup .notice-content-popup.view {
   height: auto;
+}
+.itsm-popup .notice-content-popup.view .view-row .z-checkbox {
+  padding-bottom: 1.25rem;
 }
 
 /* 태그 기능 디자인
